# teken-4-drone-gcs

./: .gitignore  README.md  drone_data.csv  main.py  pyproject.toml  resources.qrc
DroneLoggingWindow/: README.txt  datalog_prototype1.py  datalog_prototype2.py  dlw.ui  dlw_ui.py  form.ui  form_ui.py
src/: DroneModel.py  DroneVisualisationWindow.py  VehicleCommunication.py  VehicleControl.py  VehicleStatus.py  main.py  vehicle_control.py  vehicle_status.py
src/DataLogging/: DataLoggingWindow.py  DataLoggingWindowUI.py
src/MainWindow/: DroneVisualisation.py  DroneVisualisation3DWindow.py  MainWindow.py  VehicleCondition.py  VehicleDirection.py
src/MapDisplay/: MapDisplayWindow.py  MapDisplayWindowUI.py  map.css  map.html  map.js
src/PidTuning/: PidTuningWindow.py  PidTuningWindowUI.py  PidTuningWindowUI_old.py  attitude_tab.py  position_tab.py  rate_tab.py  velocity_tab.py
