[project]
name = "teken4gcs"
version = "1.0"
requires-python = ">= 3.12"
dependencies = [
    "pyqt5",
    "pyqt3d",
    "pyqtwebengine",
    "pymavlink",
    "matplotlib",
    "numpy",
    "folium"
]

readme = "README.md"

authors = [
    { name = "Kevin Imanuel Hutagaol" },
    { name = "Tsaqif Rizky Muhamad" },
    { name = "Alif Iqbal" },
    { name = "Muhamad Rafly Irsa" },
]

[project.urls]
Repository = "https://github.com/KevinHutagaol/teken-4-drone-gcs"

